--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap');
+
+*
+
+{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+body
+{
+   margin-top: 320px;
+   padding: 0;
+   font-family: sans-serif;
+   color: #fff;
+   background: #363636;
+	
+}
+
+
+header
+ {
+
+text-align: center;
+background-color: #333;
+color: #fff;
+padding: 5px;
+
+ }
+
+header p
+{
+
+font-size: 30px;
+
+} 
+
+html{
+
+	height: 100%;
+}
+
+body{
+
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	font-family: 'Robot',sans-serif;
+}
+
+footer{
+   
+    margin-top: auto;
+    background-color: black;
+    
+
+
+
+}
