--- a/style/style.css
+++ b/style/style.css
@@ -1,25 +1,138 @@
+*{
 
+    padding: 0;
+    margin:0;
+    font-family: Century gothic;
 
-
-.d-flex input
-{
-	margin:.9em 0em;
-  
 }
+ header{
 
-.d-flex button
-{
-
-	margin:1.5em.6em;
-	padding:.3em 2.4em;
-}
-
-.container table{
-
-	margin: .7em 9em;
-}
- table.btnedit{
-
- 	color:lightgreen;
- 	cursor: pointer;
+ 	background-image: url(../1.jpg);
+ 	height: 100vh;
+ 	background-size: cover;
+ 	background-position: center;
+ 	
  }
+
+ul{
+
+    float:right;
+    list-style-type: none;
+    margin: 25px;
+
+}
+ul li{
+
+	display: inline-block;
+}
+
+ul li a{
+
+	text-decoration: none;
+	color: #fff;
+	padding: 5px 20px;
+	border: 1px solid #fff;
+}
+ul li a:hover{
+
+	background-color: #fff;
+	color:#000;
+}
+
+ul li .active a{
+
+	background-color: #fff;
+	color:#000;
+
+
+}
+
+.logo image{
+
+	float:left;
+	width: 200px;
+	height: auto;
+}
+
+.title{
+
+	position: absolute;
+	top: 40%;
+	left: 25%;
+	trasform: (-50%,-50%);
+}
+
+.title h1{
+
+	color: #000;
+	font-size: 50px;
+	position: left;
+}
+.button{
+     
+     position: absolute;
+	top: 60%;
+	left: 35%;
+	trasform: (-50%,-50%);
+
+
+
+}
+
+
+
+
+.btn{
+
+	border: .80px solid #fff;
+	padding: 10px 30px;
+	color: #000;
+	text-decoration: none;
+	transition: 0.6s ease;
+}
+
+.btn:hover{
+
+    background-color: #fff;
+    color: #000;
+
+}
+
+/* booking.html */
+
+body > table{
+
+	width: 80%;
+}
+
+table{
+
+	border-collapse: collapse;
+}
+
+table.list{
+
+	width:100%;
+}
+
+td,th{
+
+	border: 1px solid #dddddd;
+	text-align: left;
+	padding: 8px;
+}
+
+tr:nth-child(even).table.list thead>tr{
+
+	background-color: #dddddd
+}
+
+input[type=text],input[type=number]{
+
+	width: 100%;
+	padding: 12px 28px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid;
+	border-radius: 4px
+}
